Add keywords and homepage to composer.json.

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,8 @@
 	"name": "ryprop/nife",
 	"type": "library",
 	"description": "Modern, no-bullshit MVC framework for PHP",
+	"keywords": ["nife", "mvc"]
+	"homepage": "http://www.nife-framework.org",
 	"authors": [
 		{
 			"name": "Ryan Parker",
