--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,17 @@
 	"require": {
 		"php": ">=5.2.0"
 	},
+	"require-dev": {
+		"phpunit/phpunit": "~3.7.37"
+	},
         "autoload": {
                 "psr-0": {
                         "Nife_": "lib/"
+                }
+        },
+        "autoload-dev": {
+                "psr-0": {
+                        "Nife_": "test/"
                 }
         }
 }
