--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
 		}
 	],
 	"require": {
-		"php": "~5.2.0"
+		"php": "^5.2.0"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "~3.7"
+		"phpunit/phpunit": "^3.7"
 	},
         "autoload": {
                 "psr-0": {
