--- a/composer.json
+++ b/composer.json
@@ -15,16 +15,16 @@
 		"php": ">=5.2"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "^3.7"
+		"togos/simpler-test": "^1.1"
 	},
-        "autoload": {
-                "psr-0": {
-                        "Nife_": "lib/"
-                }
-        },
-        "autoload-dev": {
-                "psr-0": {
-                        "Nife_": "test/"
-                }
-        }
+	"autoload": {
+		"psr-0": {
+			"Nife_": "lib/"
+		}
+	},
+	"autoload-dev": {
+		"psr-0": {
+			"Nife_": "test/"
+		}
+	}
 }
